erDiagram

    users {
        int id PK
        string username
        string email
        string password
        timestamp created_at
        timestamp updated_at
    }

    transactions {
        int id PK
        int user_id FK
        int category_id FK
        string title
        enum type
        int amount
        boolean is_impulsive
        timestamp transaction_date
    }

    settings {
        int id PK
        int user_id FK
        int monthly_income
        int weekly_budget
        int segment
        string segment_label
        timestamp created_at
        timestamp updated_at
    }

    categories {
        string id PK
        string name
        enum type 
    }

    sessions {
        string token PK
    }

    users ||--o{ transactions : has
    users ||--|| settings : has
    transactions ||--o{ categories : has